mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
    primary: generate_data
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: 5R2TO8AR
        - name: MYSQL_DATABASE
          value: generatedata
        - name: MYSQL_USER
          value: user1
        - name: MYSQL_PASSWORD
          value: O54MAPC8
        image: registry.redhat.io/rhel8/mysql-80
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - hostPath: /
          mountPath: /var/lib/mysql/data
          name: mysql-data
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-2-pvc
      imagePullSecrets:
      - name: 13162754-klm-ibm-pull-secret
