webserver.yaml
apiVersion: v1
kind: Pod
metadata:
    labels:
      app: webserver
      primary: generate_data
    name: webserver
spec:
    containers:
    - image: nginx:alpine
      name: webserver
      ports:
      - containerPort: 8081
      volumeMounts:
      - hostPath: /
        mountPath: /application
        name: nfs-volume
      - mountPath: /etc/nginx/nginx.conf
        name: nginx-config
        subPath: nginx.conf
      - mountPath: /etc/nginx/conf.d
        name: default-config
    volumes:
    - name: init-volume
      persistentVolumeClaim:
        claimName: webserver-pvc
    - name: nfs-volume
      persistentVolumeClaim:
        claimName: webserver-pvc
    - configMap:    
        items:
        - key: nginx.conf
          path: nginx.conf
        name: nginx-config
      name: nginx-config
    - configMap:
        items:
        - key: default.conf
          path: default.conf
        name: nginx-config
      name: default-config
    - configMap:
        items:
        - key: settings.php
          path: settings.php
        name: nginx-config
      name: php-settings
