route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: webserver
    primary: generate_data
  name: webserver
spec:
  host: generate-data.mycluster-dal10-b3-552823-32473ca4d3b4f0bf6716e23f5ecf4388-0000.us-south.containers.appdomain.cloud
  port:
    targetPort: 8081
  to:
    kind: Service
    name: webserver
    weight: 100
  wildcardPolicy: None
